Process Specifications - Login
Added the Login Activity diagram for the User Sub-system in the main
Software Requirements document.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1016,6 +1016,11 @@
 	
 		\subsection{Process Specifications}\label{subsec:processspecification}
 		Certain use cases require further information with regards to their function.\\ These use cases are specified further by means of process specification.
+		\subsubsection{User Sub-system}
+			\begin{figure}[H]
+				\includegraphics[width=\linewidth]{../Diagrams/Process Specifications/act__Login__Login.jpg}
+				\caption{Login}
+			\end{figure}
 			%\begin{figure}[h]
 			%\includegraphics[width=4in]{imagename}
 			%\caption{Figure information}
