Process Specifications - Logout
Added the Logout activity diagram under the User Sub-system section.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1018,13 +1018,14 @@
 		Certain use cases require further information with regards to their function.\\ These use cases are specified further by means of process specification.
 		\subsubsection{User Sub-system}
 			\begin{figure}[H]
-				\includegraphics[width=\linewidth]{../Diagrams/Process Specifications/act__Login__Login.jpg}
+				\includegraphics[width=6in]{../Diagrams/Process Specifications/act__Login__Login.jpg}
 				\caption{Login}
 			\end{figure}
-			%\begin{figure}[h]
-			%\includegraphics[width=4in]{imagename}
-			%\caption{Figure information}
-			%\end
+			\begin{figure}[H]
+				\includegraphics[width=6in]{../Diagrams/Process Specifications/act__Logout__Logout.jpg}
+				\caption{Logout}
+			\end{figure}
+			
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
