Process Specification - View Profile
Added the activity diagram for the user to view their own profile under
the user sub-system.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1019,13 +1019,16 @@
 		\subsubsection{User Sub-system}
 			\begin{figure}[H]
 				\includegraphics[width=6in]{../Diagrams/Process Specifications/act__Login__Login.jpg}
-				\caption{Login}
+				\caption{User - Login}
 			\end{figure}
 			\begin{figure}[H]
 				\includegraphics[width=6in]{../Diagrams/Process Specifications/act__Logout__Logout.jpg}
-				\caption{Logout}
+				\caption{User - Logout}
 			\end{figure}
-			
+			\begin{figure}[H]
+				\includegraphics[width=6in]{../Diagrams/Process Specifications/act__View_Own_Profile__View_Own_Profile.jpg}
+				\caption{User - View Own Profile}
+			\end{figure}
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
