Process Specification - View Own Profile
Added the View Own Profile activity diagram in the Software Requirements
document.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1026,7 +1026,7 @@
 				\caption{User - Logout}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=6in]{../Diagrams/Process Specifications/act__View_Own_Profile__View_Own_Profile.jpg}
+				\includegraphics[width=6in]{../Diagrams/Process Specifications/View Own Profile.jpg}
 				\caption{User - View Own Profile}
 			\end{figure}
 		
