Process Specifications - User Sub-system Update
I've updated the Head of Research Group subsection of the user
sub-system and added them into the Software Requirements document.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1018,16 +1018,28 @@
 		Certain use cases require further information with regards to their function.\\ These use cases are specified further by means of process specification.
 		\subsubsection{User Sub-system}
 			\begin{figure}[H]
-				\includegraphics[width=6in]{../Diagrams/Process Specifications/act__Login__Login.jpg}
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/act__Login__Login.jpg}
 				\caption{User - Login}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=6in]{../Diagrams/Process Specifications/act__Logout__Logout.jpg}
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/act__Logout__Logout.jpg}
 				\caption{User - Logout}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=6in]{../Diagrams/Process Specifications/View Own Profile.jpg}
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/View Own Profile.jpg}
 				\caption{User - View Own Profile}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Edit Own Profile.jpg}
+				\caption{User - Edit Own Profile}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/View_Search All User Profiles in a Research Group.jpg}
+				\caption{Head of Research - Search/View All Users in a Research Group}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Add_Remove Users from Research Group.jpg}
+				\caption{Head of Research - Add/Remove All Users in a Research Group}
 			\end{figure}
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
